--- a/dojo/dojo.server/Web.config
+++ b/dojo/dojo.server/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <connectionStrings>
+    <add name="Dojo" connectionString="Integrated Security=SSPI;Server=.;Application Name=Dojo;database=Dojo" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
