Using IIS Express

--- a/dojo/dojo.server/dojo.server.csproj
+++ b/dojo/dojo.server/dojo.server.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>dojo.server</RootNamespace>
     <AssemblyName>dojo.server</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -161,7 +161,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50352</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/dojo.server</IISUrl>
+          <IISUrl>http://localhost:50352/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
